// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen accessGroups config import-export] should do nothing when the accessGroups already exist: the accessGroups already exist and have not been imported 1`] = `
Object {
  "stderr": "",
  "stdout": "= accessgroup => Environment/cfgObjectTest
Completed. 0 object(s) imported.
",
}
`;

exports[`[mutagen accessGroups config import-export] should import the accessGroups: the accessGroups have been imported 1`] = `
Object {
  "stderr": "",
  "stdout": "+ accessgroup => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
